Задание из ДЗ 3

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OtusCSharpHW3\OtusCSharpHW3.csproj" />
+  </ItemGroup>
+
 </Project>
